# spark-video

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEBUGGING.md  Makefile  README.md  README.zh.md  SKILL.md  pyproject.toml
.claude/commands/: bootstrap.md  cast-init.md  director.md  episode.md  render.md  retry.md  review.md  scene-direct.md  scene-write.md  screenwriter.md  storyboard.md  vfx-review.md
.claude/skills/screenwriter/: SKILL.md
.claude/skills/vfx-reviewer/: SKILL.md
.claude/skills/video-director/: SKILL.md
.claude/skills/video-director/references/: direction-tone.md  shot-design.md
.claude/skills/video-reviewer/: SKILL.md
.qwen/commands/: cast-init.toml  director.toml  episode.toml  render.toml  screenwriter.toml  storyboard.toml  vfx-review.toml
cast/: README.md
lib/: ffmpeg_helpers.py  review.py  storyboard.py
references/spark-video-clip-review/: SKILL.md  rubric.md
references/spark-video-director/: SKILL.md
references/spark-video-episode/: SKILL.md
scripts/: bl  build_viewer.py  doctor.sh  install-shanyin-skills.sh  pre-commit  render_shot.py  retts.py  scaffold.py  stitch.py  storyboard.py
scripts/providers/: bl.py
src/videogen/: __init__.py  bgm.py  cast.py  cli.py  config.py  ffmpeg.py  lore.py  model_log.py  movie_set.py  npc.py  prop.py  render.py  review.py  rewrite.py  scene.py  state.py  storyboard.py  tts.py  upload.py  wan.py
src/videogen/providers/: __init__.py  base.py  happyhorse.py  registry.py  wan.py
