[project]
name = "videogen"
version = "0.1.0"
description = "Long-form (5min+) AI video generation orchestrator with character consistency, driven by Claude Code / Qwen Code via Skills + Slash Commands."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "videogen" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "dashscope>=1.25.16",
    "tenacity>=8.2",
    "pillow>=10.2",
    "pyyaml>=6.0",
]

[project.scripts]
videogen = "videogen.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
